--- a/css/custom.css
+++ b/css/custom.css
@@ -1,35 +1,26 @@
-body {
-  --padding-top: 2rem;
-  background-color: whitesmoke;
+.bodybackgrd {
+  --background-color: whitesmoke;
+  background: url('../images/bg01.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  --width: 100%;
+  min-height: 100vh;
 }
 
-.opacity90 {
-  opacity: 0.9;
-  filter: alpha(opacity=90); /* For IE8 and earlier */
-}
-
-.rounded-25 {
+.customcard {
 	border-radius: 25px;
-}
-
-.h-500 {
-	min-height: 500px;
-}
-
-.bg-img1 {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.size1 {
-    width: 100%;
-    min-height: 100vh;
-}
-
-.wsize1 {
-  max-width: 100%;
-  width: 880px;
+	--max-width: 880px;
+	min-height: 70vh;
+	opacity: 0.9;
+	filter: alpha(opacity=90); /* For IE8 and earlier */
+	--background-image:url('../images/bg02.jpg');
+	--background-size: 25%;
+	--background-position: center;
+	--background-repeat: no-repeat;
 }
 
 
